Limited thread count to 4. Fixed args message.